pkg/lang/testdata/ub/body-meta/valid/resource-timeout.ub
resources: { aws.vpc.this: { @timeout: '5m' } }
