pkg/lang/testdata/ub/body-meta/invalid/resource-timeout-non-string.ub
resources: { aws.vpc.this: { @timeout: 30 } }
